run/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: csi-nfs-export
  labels:
    nfs-export.csi.k8s.io/ns: ""
