run/nfsclient.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-client
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: nfs-client
      image: d3fk/nfs-client
      securityContext:
        privileged: true
      command:
        - tail
        - -f
        - /dev/null
