run/node.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: csi-nfs-export-node
  namespace: csi-nfs-export
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: csi-nfs-export-node
  template:
    metadata:
      labels:
        app: csi-nfs-export-node
    spec:
      hostNetwork: true  # original nfs connection would be broken without hostNetwork setting
      dnsPolicy: Default  # available values: Default, ClusterFirstWithHostNet, ClusterFirst
      serviceAccountName: csi-nfs-export-node-sa
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - operator: "Exists"
      containers:
        - name: liveness-probe
          image: daocloud.io/daocloud/livenessprobe:v2.7.0
          args:
            - --csi-address=/csi/csi.sock
            - --probe-timeout=3s
            - --health-port=29653
            - --v=2
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
          resources: {}
        - name: node-driver-registrar
          image: daocloud.io/daocloud/csi-node-driver-registrar:v2.5.1
          args:
            - --v=2
            - --csi-address=/csi/csi.sock
            - --kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)
          livenessProbe:
            exec:
              command:
                - /csi-node-driver-registrar
                - --kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)
                - --mode=kubelet-registration-probe
            initialDelaySeconds: 30
            timeoutSeconds: 15
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: registration-dir
              mountPath: /registration
            - mountPath: /var/snap/microk8s/common/var/lib/kubelet/pods
              name: pods-mount-dir
            - mountPath: /pods 
              name: pods-mount-dir
          resources: {}
        - name: nfs-export
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
            allowPrivilegeEscalation: true
          # image: daocloud.io/daocloud/nfsplugin:v4.1.0
          image: daocloud.io/alpine
          # args:
          command:
            - /go/cne/bin/nfsexportplugin
            - "-v=5"
            - "--nodeid=$(NODE_ID)"
            - "--endpoint=$(CSI_ENDPOINT)"
          ports:
            - containerPort: 29653
              name: healthz
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 30
            timeoutSeconds: 10
            periodSeconds: 30
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: pods-mount-dir
              mountPath: /var/snap/microk8s/common/var/lib/kubelet/pods
              mountPropagation: "Bidirectional"
            - name: pods-mount-dir
              mountPath: /pods
            - name: github
              mountPath: /go/cne
          resources: {}
      volumes:
        - name: socket-dir
          hostPath:
            path: /var/snap/microk8s/common/var/lib/kubelet/plugins/csi-nfsplugin
            type: DirectoryOrCreate
        - name: pods-mount-dir
          hostPath:
            path: /var/snap/microk8s/common/var/lib/kubelet/pods
            type: Directory
        - hostPath:
            path: /var/snap/microk8s/common/var/lib/kubelet/plugins_registry
            type: Directory
          name: registration-dir
        - name: github
          hostPath:
            path: /media/psf/Github/rafflescity/csi-driver-nfs-export/
            type: Directory
